gl33-master/src/test/deca/context/valid/others/affectation_flottant_flottant.deca
// Valid test
// Affectation d'un floattant à un flottant

{
   float x = 1.2;
   float y = 2.3;

   x = y;
   y = x;
}
