gl33-master/src/test/deca/context/invalid/other/affectation_string_boolean.deca
// Invalid test
// Affectation d'un string à un boolean

{
   String s;
   boolean b;

   b = s;
   b = "non";
}
